--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ gunicorn
 lxml
 serializers
 django-powercms @ git+https://bitbucket.org/josir/powercms.git@libdev
+git+https://github.com/LIAAD/TemporalSummarizationFramework.git
