Novo algoritmo para coletar apenas o texto da notícia #37, lembrar de realizar as instalações de bibliotecas pip install newspaper3k python-Levenshtein

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,75 @@
 Django<4
-mysqlclient
-gunicorn
+mysqlclient~=2.1.1
+gunicorn~=20.1.0
 -r powercms/requirements.txt
-lxml
-serializers
-selenium
+lxml~=4.9.2
+serializers~=0.2.4
+selenium~=4.9.1
 git+https://github.com/LIAAD/TemporalSummarizationFramework.git
+poweradmin~=0.1.32.0
+contamehistorias~=0.1.0
+django-mptt~=0.13.4
+captcha~=0.4
+html5lib~=1.1
+h11~=0.14.0
+cffi~=1.15.1
+future~=0.18.3
+pip~=23.1.2
+attrs~=23.1.0
+wheel~=0.40.0
+cryptography~=40.0.2
+Jinja2~=3.1.2
+cssselect~=1.2.0
+nltk~=3.8.1
+numpy~=1.24.3
+regex~=2023.5.5
+scipy~=1.10.1
+click~=8.1.3
+tqdm~=4.65.0
+pyparsing~=3.0.9
+colorama~=0.4.6
+trio~=0.22.0
+outcome~=1.2.0
+sniffio~=1.3.0
+exceptiongroup~=1.1.1
+sortedcontainers~=2.4.0
+bleach~=6.0.0
+wiki~=0.9
+Markdown~=3.3.7
+PyYAML~=6.0
+setuptools~=65.5.1
+mpmath~=1.3.0
+sympy~=1.12
+tinycss2~=1.1.1
+asgiref~=3.6.0
+joblib~=1.0.1
+pandas~=2.0.1
+MarkupSafe~=2.1.3
+python-dateutil~=2.8.2
+qrcode~=7.4.2
+segtok~=1.5.11
+cssselect2~=0.7.0
+pyHanko~=0.18.1
+tzlocal~=5.0.1
+asn1crypto~=1.5.1
+django-sekizai~=4.1.0
+django-classy-tags~=4.0.0
+networkx~=3.1
+paramiko~=3.2.0
+pycparser~=2.21
+xhtml2pdf~=0.2.8
+PyPDF3~=1.0.6
+svglib~=1.5.1
+django-appconf~=1.0.5
+mediacloud~=4.0.1
+packaging~=23.1
+zipp~=3.15.0
+recordclass~=0.18.4
+bcrypt~=4.0.1
+wsproto~=1.2.0
+Levenshtein~=0.21.1
+jellyfish~=0.11.2
+elasticsearch~=8.7.0
+oscrypto~=1.3.0
+uritools~=4.0.1
+fabric~=3.1.0
