--- a/powercms/requirements.txt
+++ b/powercms/requirements.txt
@@ -29,7 +29,7 @@ pyasn1-modules==0.2.8
 PyPDF2==2.11.1
 pytz==2020.1
 reportlab==3.6.11
-requests==2.28.1
+requests
 rsa==4.9
 six==1.16.0
 sorl-thumbnail==12.9.0
@@ -37,9 +37,9 @@ soupsieve==2.3.2
 sqlparse==0.4.3
 swapper==1.3.0
 uritemplate==4.1.1
-urllib3==1.26.12
-webencodings==0.5.1
+urllib3
+webencodings
 django-recaptcha==3.0.0
 django-compressor==4.3.1
 django-crispy-forms==2.0
-poweradmin @ git+https://bitbucket.org/josir/poweradmin.git@django322
+poweradmin @ git+https://bitbucket.org/josir/poweradmin.git@django32
